# banhxeo

./: .buildinfo  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  genindex.html  index.html  installation.html  main.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  test.py
.github/workflows/: ci.yml  docs.yml  pr_agent.yml  release.yml
_modules/: index.html
_modules/banhxeo/: utils.html
_sources/: index.rst.txt  installation.rst.txt
_sources/api/: banhxeo.core.layer.attention.rst.txt  banhxeo.core.layer.cell.rst.txt  banhxeo.core.layer.mlp.rst.txt  banhxeo.core.layer.rst.txt  banhxeo.core.rst.txt  banhxeo.core.tokenizer.bpe.rst.txt  banhxeo.core.tokenizer.config.rst.txt  banhxeo.core.tokenizer.decoder.rst.txt  banhxeo.core.tokenizer.model.rst.txt  banhxeo.core.tokenizer.normalizer.rst.txt  banhxeo.core.tokenizer.normalizers.rst.txt  banhxeo.core.tokenizer.post_processor.rst.txt  banhxeo.core.tokenizer.pre_tokenizer.rst.txt  banhxeo.core.tokenizer.presets.rst.txt  banhxeo.core.tokenizer.rst.txt  banhxeo.core.vocabulary.rst.txt  banhxeo.data.array.rst.txt  banhxeo.data.dataset.imdb.rst.txt  banhxeo.data.rst.txt  banhxeo.model.base.rst.txt  banhxeo.model.classic.gru.rst.txt  banhxeo.model.classic.lstm.rst.txt  banhxeo.model.classic.mlp.rst.txt  banhxeo.model.classic.rnn.rst.txt  banhxeo.model.classic.rst.txt  banhxeo.model.classic.word2vec.rst.txt  banhxeo.model.config.rst.txt  banhxeo.model.gpt2.rst.txt  banhxeo.model.llm.config.rst.txt  banhxeo.model.llm.gpt2.rst.txt  banhxeo.model.llm.layers.layer_norm.rst.txt  banhxeo.model.llm.rst.txt  banhxeo.model.neural.rst.txt  banhxeo.model.old.n_gram.rst.txt  banhxeo.model.rnn.rst.txt  banhxeo.model.rst.txt  banhxeo.rst.txt  banhxeo.train.callbacks.rst.txt  banhxeo.train.config.rst.txt  banhxeo.train.rst.txt  (+3 more)
api/: banhxeo.core.html  banhxeo.core.layer.attention.html  banhxeo.core.layer.cell.html  banhxeo.core.layer.html  banhxeo.core.layer.mlp.html  banhxeo.core.tokenizer.bpe.html  banhxeo.core.tokenizer.config.html  banhxeo.core.tokenizer.decoder.html  banhxeo.core.tokenizer.html  banhxeo.core.tokenizer.model.bpe.html  banhxeo.core.tokenizer.model.html  banhxeo.core.tokenizer.model.word.html  banhxeo.core.tokenizer.normalizer.html  banhxeo.core.tokenizer.normalizers.html  banhxeo.core.tokenizer.post_processor.html  banhxeo.core.tokenizer.pre_tokenizer.html  banhxeo.core.tokenizer.presets.html  banhxeo.core.vocabulary.html  banhxeo.data.array.html  banhxeo.data.base.html  banhxeo.data.config.html  banhxeo.data.dataset.amazon_review.html  banhxeo.data.dataset.html  banhxeo.data.dataset.imdb.html  banhxeo.data.html  banhxeo.data.loader.html  banhxeo.data.transforms.html  banhxeo.html  banhxeo.model.base.html  banhxeo.model.classic.gru.html  banhxeo.model.classic.html  banhxeo.model.classic.lstm.html  banhxeo.model.classic.mlp.html  banhxeo.model.classic.rnn.html  banhxeo.model.classic.word2vec.html  banhxeo.model.config.html  banhxeo.model.gpt2.html  banhxeo.model.html  banhxeo.model.llm.config.html  banhxeo.model.llm.gpt2.html  (+17 more)
docs/: conf.py  index.rst
docs/api/: banhxeo.core.rst  banhxeo.core.tokenizer.decoder.rst  banhxeo.core.tokenizer.model.bpe.rst  banhxeo.core.tokenizer.model.rst  banhxeo.core.tokenizer.model.word.rst  banhxeo.core.tokenizer.post_processor.rst  banhxeo.core.tokenizer.rst  banhxeo.data.base.rst  banhxeo.data.config.rst  banhxeo.data.dataset.amazon_review.rst  banhxeo.data.dataset.rst  banhxeo.data.loader.rst  banhxeo.model.mlp.rst  banhxeo.model.old.rst  banhxeo.rst  banhxeo.train.trainer.rst  banhxeo.trainer.rst  (+1 more)
doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
examples/: .gitignore  mlp.ipynb  mlp_train.ipynb  n_gram.ipynb  rnn.ipynb
html/: installation.html
tests/: compute_ops.py  movement_ops.py  permute.py  reduce_ops.py  slice.py
(+218 files in other folders)
