[project]
name = "banhxeo"
version = "0.2.0"
authors = [{ name = "Le Nguyen", email = "lenguyen18072003@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
keywords = ["llm", "deep learning", "torch", "triton"]
requires-python = ">=3.10"

dependencies = [
    "datasets",
    "einops",
    "gdown",
    "hf-xet",
    "jaxtyping",
    "tiktoken",
    "numpy",
    "polars",
    "tqdm",
    "torch",
    "triton; sys_platform=='linux'",
]

[project.optional-dependencies]
docs = ["sphinx>=7.4.7", "sphinx-book-theme>=1.1.4", "sphinx-rtd-theme>=3.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.2",
    "pytest>=8.3.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417", "E501", "D104", "D100", "F722", "F821"]

[tool.ruff.lint.pydocstyle]
convention = "google"
