[project]
name = "banhxeo"
version = "0.2.0"
authors = [{ name = "Le Nguyen", email = "lenguyen18072003@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
keywords = ["llm", "deep learning", "torch", "triton"]
requires-python = ">=3.13"

dependencies = [
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "graphviz>=0.21",
    "hf-xet>=1.2.0",
    "jaxtyping>=0.3.4",
    "numpy>=2.4.0",
    "polars>=1.36.1",
    "pytest>=9.0.2",
    "torch",
    "tqdm>=4.67.1",
    "triton; sys_platform=='linux'",
]

[project.optional-dependencies]
docs = ["sphinx>=7.4.7", "sphinx-book-theme>=1.1.4", "sphinx-rtd-theme>=3.0.2"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.2",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417", "E501", "D104", "D100", "F722", "F821"]

[tool.ruff.lint.pydocstyle]
convention = "google"
