[project]
name = "banhxeo"
version = "0.2.0"
authors = [{ name = "Le Nguyen", email = "lenguyen18072003@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
keywords = ["llm", "deep learning", "torch", "triton"]
requires-python = ">=3.13"

dependencies = [
    "datasets",
    "einops",
    "graphviz",
    "hf-xet",
    "jaxtyping",
    "numpy",
    "polars",
    "pytest",
    "torch",
    "tqdm",
    "triton; sys_platform=='linux'",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-book-theme", "sphinx-rtd-theme"]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "notebook",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417", "E501", "D104", "D100", "F722", "F821"]

[tool.ruff.lint.pydocstyle]
convention = "google"
